# TeleportHackDX

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  使用说明.html
.github/workflows/: build.yml
dll_injector/: README.txt
src/: dllmain.cpp
src/core/: hook.cpp  hook.h
src/desktop/: main.cpp
src/domain/: models.cpp  models.h  versions.cpp  versions.h
src/memory/: inprocess_backend.cpp  memory_backend.h  outofprocess_backend.cpp  outofprocess_backend.h
src/repository/: favlist_repository.cpp  favlist_repository.h  hotkey_config_repository.cpp  hotkey_config_repository.h  settings_repository.cpp  settings_repository.h  teleport_lua_repository.cpp  teleport_lua_repository.h
src/services/: favourites_porter.cpp  favourites_porter.h  favourites_service.cpp  favourites_service.h  feature_service.cpp  feature_service.h  hotkey_service.cpp  hotkey_service.h  teleport_service.cpp  teleport_service.h
src/ui/: app.cpp  app.h  log_view.h
src/util/: paths.cpp  paths.h  process_list.cpp  process_list.h
tests/: orientation_tests.cpp  teleport_lua_repository_tests.cpp
